--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -289,9 +289,12 @@
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Acum poți distribui numele și o poză de profil la prietenii de pe Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Profilurile Signal sunt aici</string>
   <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Vă prezentăm indicatorii de tastare.</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Acum poți vedea și partaja opțional atunci când mesajele sunt tastate</string>
+  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Acum poți vedea și partaja opțional atunci când mesajele sunt tastate.</string>
+  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Doriți să-i activați acum?</string>
   <string name="ExperienceUpgradeActivity_typing_ui_title">Indicatorii de tastare sunt aici</string>
   <string name="ExperienceUpgradeActivity_enable_typing_indicators">Activează indicatorii de tastare</string>
+  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Activează indicatorii de tastare</string>
+  <string name="ExperienceUpgradeActivity_no_thanks">Nu, mulţumesc</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Se obține un mesaj...</string>
   <!--GcmRefreshJob-->
