--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -297,6 +297,7 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Ste pripravený na portrét?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Teraz môžete s vašimi priateľmi na Signalu zdieľať vašu profilovú fotku a meno</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal profily sú tu</string>
+  <string name="ExperienceUpgradeActivity_no_thanks">Nie, ďakujem</string>
   <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Trvalá chyba komunikácie Signal!</string>
