--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -141,7 +141,7 @@
   <string name="ConversationActivity_unblock_this_contact_question">Feloldod ezt a kontaktot?</string>
   <string name="ConversationActivity_unblock_this_group_question">Feloldod a csoport blokkolását?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Újra fogadhatsz üzeneteket és hívásokat ettől a kontakttól.</string>
-  <string name="ConversationActivity_unblock_this_group_description">A csoport tagjai újra hozzáadhatnak a csoporthoz a későbbiekben.</string>
+  <string name="ConversationActivity_unblock_this_group_description">A csoport tagjai később újra hozzáadhatnak a csoporthoz.</string>
   <string name="ConversationActivity_unblock">Blokkolás feloldása</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">A melléklet mérete meghaladja az adott típushoz tartozó mérethatárt.</string>
   <string name="ConversationActivity_quick_camera_unavailable">A kamera nem érhető el</string>
@@ -268,17 +268,20 @@
   <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Üdvözöl a Signal!</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">A TextSecure mostantól Signal.</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">A TextSecure és a RedPhone már egy alkalmazás: Signal. Koppints a felfedezéséhez!</string>
-  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Köszöntsd a biztonságos videóhívásokat.</string>
+  <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Üdvözöld a biztonságos videóhívásokat.</string>
   <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">A Signal mostantól támogatja a biztonságos videóhívásokat. Csak indíts egy Signal hívást mint általában, koppints a videó gombra, és integess!</string>
   <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">A Signal mostantól támogatja a biztonságos videóhívásokat.</string>
   <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">A Signal monstantól támogatja a biztonságos videóhívásokat. Koppints a felfedezéséhez!</string>
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Készen állsz egy közeli portréra?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Mostantól megoszthatod barátaiddal profilképedet és egyéni nevedet Signal-on</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">A Signal profilok megérkeztek</string>
-  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Üzenetgépelési kijelzés bemutatása.</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Mostantól, adott esetben láthatod és megoszthatod az üzenetek gépelését</string>
-  <string name="ExperienceUpgradeActivity_typing_ui_title">Az üzenetgépelési kijelzés itt található</string>
-  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Üzenetgépelési kijelzés bekapcsolása</string>
+  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Bemutatjuk a gépelés-indikátorokat.</string>
+  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Mostantól lehetőséged van megtekinteni és megosztani azt, hogy éppen gépelsz.</string>
+  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Szeretnéd most bekapcsolni?</string>
+  <string name="ExperienceUpgradeActivity_typing_ui_title">A gépelésindikátor megérkezett</string>
+  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Gépelésindikátor engedélyezése</string>
+  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Gépelésindikátor bekapcsolása</string>
+  <string name="ExperienceUpgradeActivity_no_thanks">Nem, köszönöm</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Üzenet letöltése...</string>
   <!--GcmRefreshJob-->
@@ -447,7 +450,7 @@ Kérlek telepítsd újra a Google Play Szolgáltatásokat, majd próbáld újra!
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Újra kaphatsz üzeneteket és hívásokat ettől a kontakttól.</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_question">Feloldod a csoport blokkolását?</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_description">A csoport tagjai újra hozzáadhatnak a csoporthoz a későbbiekben.</string>
-  <string name="RecipientPreferenceActivity_error_leaving_group">Hiba történt a csoport elhagyásakor</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Hiba történt a csoportból történő kilépéskor</string>
   <string name="RecipientPreferenceActivity_unblock">Feloldás</string>
   <string name="RecipientPreferenceActivity_enabled">Engedélyezve</string>
   <string name="RecipientPreferenceActivity_disabled">Letiltva</string>
@@ -640,7 +643,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <!--TransferControlView-->
   <plurals name="TransferControlView_n_items">
     <item quantity="one">1%d Elem</item>
-    <item quantity="other">%d Elem</item>
+    <item quantity="other">%d elem</item>
   </plurals>
   <!--UnauthorizedReminder-->
   <string name="UnauthorizedReminder_device_no_longer_registered">Az eszköz már nincs regisztrálva</string>
@@ -1020,8 +1023,8 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="preferences__incognito_keyboard">Inkognitó billentyűzet</string>
   <string name="preferences__read_receipts">Olvasási nyugták</string>
   <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">Ha az olvasási nyugták le vannak tiltva, te sem fogod látni mások olvasási nyugtáit.</string>
-  <string name="preferences__typing_indicators">Üzenetgépelési kijelzés</string>
-  <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Ha az üzenetgépelési kijelzés ki van kapcsolva, nem fogod látni mások üzenetének gépelését.</string>
+  <string name="preferences__typing_indicators">Gépelésindikátor</string>
+  <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Ha a gépelés-indikátorod ki van kapcsolva, nem fogod látni mások gépelés-indikátorát sem.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Tanulás letiltásának kérése a billentyűzettől (személyre szabás kikapcsolása)</string>
   <string name="preferences_app_protection__blocked_contacts">Blokkolt kontaktok</string>
   <string name="preferences_chats__when_using_mobile_data">Mobilinternet használatakor</string>
@@ -1048,8 +1051,8 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="preferences_events__contact_joined_signal">Ismerős csatlakozott a Signal-hoz</string>
   <string name="preferences_notifications__priority">Prioritás</string>
   <string name="preferences_communication__category_sealed_sender">Rejtett feladó</string>
-  <string name="preferences_communication__sealed_sender_display_indicators">Indikátorok kijelzése</string>
-  <string name="preferences_communication__sealed_sender_display_indicators_description">Jelenítsen meg egy státuszikont a rejtett feladóval feladott üzenetek \"Üzenet részletei\" menüpontjában.</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Indikátorok megjelenítése</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Jelenítsen meg egy státuszikont a rejtett feladóval kézbesített üzenetek \"Üzenet részletei\" menüpontjában.</string>
   <string name="preferences_communication__sealed_sender_allow_from_anyone">Engedélyezés mindenkitől</string>
   <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Rejtett feladóval érkező üzenetek engedélyezése olyan nem-kontaktoktól és személyektől is, akikkel nem osztottad meg profilod.</string>
   <string name="preferences_communication__sealed_sender_learn_more">További információ</string>
@@ -1215,7 +1218,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Signal-hoz való hozzáférés védelme Android képernyőzárral vagy ujjlenyomattal</string>
   <string name="preferences_app_protection__screen_lock_inactivity_timeout">Képernyő lezárása ennyi tétlenséget követően</string>
   <string name="AppProtectionPreferenceFragment_none">Egyik sem</string>
-  <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">A regisztrációs zár PIN nem ugyanaz mint az SMS ellenőrző kód, amit az előbb kaptál. Kérlek add meg a PIN kódot, amelyet korábban az alkalmazásban állítottál be!</string>
+  <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">A regisztrációs zár PIN nem ugyanaz mint az SMS ellenőrző kód, amit az imént kaptál. Kérlek add meg a PIN kódot, amelyet korábban az alkalmazásban állítottál be!</string>
   <string name="registration_activity__registration_lock_pin">Regisztrációs zár PIN</string>
   <string name="registration_activity__forgot_pin">Elfelejtetted PIN kódodat?</string>
   <string name="registration_lock_dialog_view__the_pin_can_consist_of_four_or_more_digits_if_you_forget_your_pin_you_could_be_locked_out_of_your_account_for_up_to_seven_days">A PIN kód négy vagy több számjegyből állhat. Ha elfelejted PIN kódodat, előfordulhat, hogy a rendszer maximum hét napra kizár fiókodból.</string>
@@ -1234,8 +1237,8 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="RegistrationActivity_oh_no">Jaj ne!</string>
   <string name="RegistrationActivity_registration_of_this_phone_number_will_be_possible_without_your_registration_lock_pin_after_seven_days_have_passed">Ezt a telefonszámot regisztrációs zár PIN kód nélkül is újra lehet regisztrálni 7 nappal azután, hogy a telefonszám utoljára aktív volt Signal-on. Addig még %d nap van hátra.</string>
   <string name="RegistrationActivity_registration_lock_pin">Regisztrációs zár PIN kód</string>
-  <string name="RegistrationActivity_this_phone_number_has_registration_lock_enabled_please_enter_the_registration_lock_pin">Ehhez a telefonszámhoz engedélyezték a regisztrációs zárat. Kérlek add meg a regisztrációs zár PIN kódot!</string>
-  <string name="RegistrationLockDialog_registration_lock_is_enabled_for_your_phone_number">A regisztrációs zár engedélyezve van telefonszámodhoz. A regisztrációs zár PIN kódod könnyebb megjegyzésének érdekében a Signal időközönként megkér annak megerősítésére.</string>
+  <string name="RegistrationActivity_this_phone_number_has_registration_lock_enabled_please_enter_the_registration_lock_pin">Ehhez a telefonszámhoz bekapcsolták a regisztrációs zárat. Kérlek add meg a regisztrációs zár PIN kódot!</string>
+  <string name="RegistrationLockDialog_registration_lock_is_enabled_for_your_phone_number">A regisztrációs zár engedélyezve lett telefonszámodon. A PIN kódod könnyebb megjegyzésének érdekében a Signal időközönként megkér annak megerősítésére.</string>
   <string name="RegistrationLockDialog_i_forgot_my_pin">Elfelejtettem a PIN-em.</string>
   <string name="RegistrationLockDialog_forgotten_pin">Elfelejtett PIN?</string>
   <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">A regisztrációs zár segít megvédeni a telefonszámodat a jogosulatlan regisztrációs próbálkozásoktól. Ez a funkció bármikor letiltható a Signal adatvédelmi beállításaiban.</string>
