--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -9,6 +9,7 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Pesan baru</string>
   <!--AlbumThumbnailView-->
+  <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Sekarang: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Anda belum mengatur kata kunci!</string>
@@ -67,10 +68,13 @@
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Panggilan masuk</string>
   <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Kamera tidak tersedia.</string>
+  <string name="CameraActivity_image_save_failure">Gagal menyimpan gambar.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Hapus</string>
   <string name="ClearProfileActivity_remove_profile_photo">Buang foto profil?</string>
   <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Tidak ada peramban web ditemukan.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Angka keamanan Anda dengan %1$s telah berubah. Ini bisa disebabkan seseorang mencoba mencegat komunikasi Anda, atau disebabkan %2$s telah memasang ulang Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Sebaiknya Anda memastikan angka keamanan dengan kontak ini.</string>
@@ -131,6 +135,7 @@
   <string name="ConversationActivity_error_leaving_group">Gagal meninggalkan grup</string>
   <string name="ConversationActivity_specify_recipient">Silahkan pilih kontak</string>
   <string name="ConversationActivity_unblock_this_contact_question">Buka blokir kontak ini?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Buka blokir grup ini?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Anda kembali dapat menerima pesan dan panggilan dari kontak ini.</string>
   <string name="ConversationActivity_unblock">Buka blokir</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">Lampiran melebihi batas ukuran untuk tipe pesan yang Anda kirimkan.</string>
@@ -254,7 +259,12 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Siap foto wajah</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Sekarang anda dapat membagikan nama dan foto profil dengan kawan anda di Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Profil signal ada di sini</string>
+  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Memperkenalkan indikator ketik.</string>
+  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Sekarang Anda dapat secara opsional melihat dan berbagi saat pesan sedang diketik.</string>
+  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Apakah Anda ingin mengaktifkannya sekarang?</string>
+  <string name="ExperienceUpgradeActivity_no_thanks">Tidak, terima kasih</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Mengambil pesan...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Kegagalan permanen komunikasi Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal tidak dapat melakukan registrasi dengan Layanan Google Play. Fitur Signal seperti pesan dan panggilan di nonaktifkan, mohon registrasi ulang melalui Pengaturan &gt; Lanjutan.</string>
@@ -396,6 +406,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versi dari Layanan Google Play yang Anda pasang tidak berfungsi dengan benar. Mohon pasang ulang Layanan Google Play dan coba lagi.</string>
   <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Mengambil pesan...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Nilai aplikasi ini</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Jika Anda suka menggunakan aplikasi ini, luangkan waktu sejenak untuk membantu kami dengan memberikan nilai pada aplikasi.</string>
@@ -406,9 +417,11 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokir kontak ini?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Anda tidak akan lagi menerima pesan dan panggilan dari kontak ini.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Blokir dan tinggalkan grup ini?</string>
   <string name="RecipientPreferenceActivity_block">Blokir</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Buka blokir kontak ini?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Anda kembali dapat menerima pesan dan panggilan dari kontak ini.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Buka blokir grup ini?</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">Gagal meninggalkan grup</string>
   <string name="RecipientPreferenceActivity_unblock">Buka blokir</string>
   <string name="RecipientPreferenceActivity_enabled">Aktif</string>
