--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -9,6 +9,7 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nytt meddelande</string>
   <!--AlbumThumbnailView-->
+  <string name="AlbumThumbnailView_plus">\+%d</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Nuvarande: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Du har inte angivit ett lösenord än!</string>
@@ -70,10 +71,13 @@
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Inkommande samtal</string>
   <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Kamera otillgänglig.</string>
+  <string name="CameraActivity_image_save_failure">Misslyckades med att spara bilden.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Ta bort</string>
   <string name="ClearProfileActivity_remove_profile_photo">Ta bort profilbild?</string>
   <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Ingen webbläsare hittades.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Ditt säkerhetsnummer med %1$s har ändrats. Detta kan antingen betyda att någon försöker avlyssna er kommunikation, eller att %2$s helt enkelt ominstallerat Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Du kan vilja verifiera ditt säkerhetsnummer med denna kontakt.</string>
@@ -134,6 +138,7 @@
   <string name="ConversationActivity_error_leaving_group">Fel vid lämna grupp</string>
   <string name="ConversationActivity_specify_recipient">Vänligen välj en kontakt</string>
   <string name="ConversationActivity_unblock_this_contact_question">Avblockera denna kontakt?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Avblockera denna grupp?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Du kommer nu åter få meddelanden och samtal från denna kontakt.</string>
   <string name="ConversationActivity_unblock_this_group_description">Befintliga medlemmar kommer att kunna lägga dig till gruppen igen.</string>
   <string name="ConversationActivity_unblock">Avblockera</string>
@@ -269,7 +274,15 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Redo för din närbild?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Du kan nu dela en profilbild och ett namn med dina vänner på Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal-profiler är här</string>
+  <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Introducerar skriv-indikatorer.</string>
+  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Nu kan du valfritt visa och dela när meddelanden skrivs.</string>
+  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Vill du aktivera dem nu?</string>
+  <string name="ExperienceUpgradeActivity_typing_ui_title">Skriv-indikatorer är nu här</string>
+  <string name="ExperienceUpgradeActivity_enable_typing_indicators">Aktivera skriv-indikatorer</string>
+  <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Sätt på skriv-indikatorer</string>
+  <string name="ExperienceUpgradeActivity_no_thanks">Nej tack</string>
   <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Hämtar ett meddelande...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Permanent kommunikationsfel med Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal kunde inte registrera sig på Google Play-tjänster. Meddelanden och samtal med Signal har avaktiverats, vänligen försök återregistrera i Inställningar &gt; Avancerat.</string>
@@ -322,6 +335,7 @@
   <string name="InviteActivity_no_app_to_share_to">Verkar som att du inte har några appar att dela till.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Vänner låter inte varandra chatta okrypterat.</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">Arbetar i bakgrunden...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Misslyckades att skicka</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nytt säkerhetsnummer</string>
@@ -414,6 +428,7 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versionen av Google Play-tjänster du har installerat fungerar inte korrekt. Installera om Google Play-tjänster och försök igen.</string>
   <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Hämtar ett meddelande...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Betygsätt denna app</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Om du gillar denna app kan du hjälpa oss genom att betygsätta den.</string>
@@ -424,10 +439,13 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blockera denna kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Du kommer inte längre få meddelanden eller samtal från denna kontakt.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Blockera och lämna den här gruppen?</string>
+  <string name="RecipientPreferenceActivity_block_group">Blockera den här gruppen?</string>
   <string name="RecipientPreferenceActivity_block_and_leave_group_description">Du kommer inte längre att få meddelanden eller uppdateringar från den här gruppen.</string>
   <string name="RecipientPreferenceActivity_block">Blockera</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Avblockera denna kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Du kommer nu åter få meddelanden och samtal från denna kontakt.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Avblockera denna grupp?</string>
   <string name="RecipientPreferenceActivity_unblock_this_group_description">Befintliga medlemmar kommer att kunna lägga dig till gruppen igen.</string>
   <string name="RecipientPreferenceActivity_error_leaving_group">Fel vid lämna grupp</string>
   <string name="RecipientPreferenceActivity_unblock">Avblockera</string>
@@ -469,6 +487,10 @@ angav (%s) är ogiltigt.</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal behöver tillgång till dina kontakter och media för att kunna koppla ihop med vänner, utbyta meddelanden, och göra säkra samtal</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Kan inte ansluta till tjänsten. Kontrollera din nätverksanslutning och försök igen.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">För att enkelt verifiera ditt telefonnumer kan Signal automatiskt detektera din verifikationskod om du tillåter Signal att se SMS-meddelanden.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Du är nu %d steg bort från att skicka in en felsökningslogg.</item>
+    <item quantity="other">Du är nu %d steg bort från att skicka in en felsökningslogg.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Misslyckades med att spara bildändringar</string>
   <!--Search-->
@@ -477,6 +499,7 @@ angav (%s) är ogiltigt.</string>
   <string name="SearchFragment_header_contacts">Kontakter</string>
   <string name="SearchFragment_header_messages">Meddelanden</string>
   <!--SendJob-->
+  <string name="SendJob_sending_a_message">Skickar ett meddelande...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Lägg till i kontakter</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Bjud in till Signal</string>
@@ -509,7 +532,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="ThreadRecord_missed_call">Missat samtal</string>
   <string name="ThreadRecord_media_message">Mediameddelande</string>
   <string name="ThreadRecord_s_is_on_signal">%s finns på Signal!</string>
-  <string name="ThreadRecord_disappearing_messages_disabled">Försvinnande meddelanden inaktiverad</string>
+  <string name="ThreadRecord_disappearing_messages_disabled">Försvinnande meddelanden inaktiverat</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Tiden för försvinnande meddelanden inställd till %s</string>
   <string name="ThreadRecord_safety_number_changed">Säkerhetsnummer ändrat</string>
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">Ditt säkerhetsnummer med %s har ändrats.</string>
@@ -600,6 +623,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="QuickResponseService_problem_sending_message">Problem med att skicka meddelandet!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Sparad till %s</string>
+  <string name="SaveAttachmentTask_saved">Sparad</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Sök</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Sök efter konversationer, kontakter och meddelanden.</string>
@@ -609,6 +633,10 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Nytt meddelande</string>
   <!--TransferControlView-->
+  <plurals name="TransferControlView_n_items">
+    <item quantity="one">%d objekt</item>
+    <item quantity="other">%d objekt</item>
+  </plurals>
   <!--UnauthorizedReminder-->
   <string name="UnauthorizedReminder_device_no_longer_registered">Enhet inte längre registreread</string>
   <string name="UnauthorizedReminder_this_is_likely_because_you_registered_your_phone_number_with_Signal_on_a_different_device">Detta är troligen på grund av att du registrerade ditt mobilnummer med Signal på en annan enhet. Tryck för att registrera om dig.</string>
@@ -986,6 +1014,8 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="preferences__incognito_keyboard">Inkognito-tangentbord</string>
   <string name="preferences__read_receipts">Läskvittenser</string>
   <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">Om läskvittenser är avstängda kan du inte se läskvittenser från andra.</string>
+  <string name="preferences__typing_indicators">Skriv-indikatorer</string>
+  <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Om skriv-indikatorer är avstängda kan du inte se skriv-indikatorer från andra.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Begär att tangentbordet stänger av personlig inlärning</string>
   <string name="preferences_app_protection__blocked_contacts">Blockerade kontakter</string>
   <string name="preferences_chats__when_using_mobile_data">Vid användande av mobildata</string>
@@ -1012,7 +1042,11 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="preferences_events__contact_joined_signal">Kontakt anslöt sig till Signal</string>
   <string name="preferences_notifications__priority">Prioritet</string>
   <string name="preferences_communication__category_sealed_sender">Dold avsändare</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Visa indikatorer</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Visa en statusikon när du väljer \"Meddelandedetaljer\" på meddelanden som levererades med dold avsändare.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Tillåt från alla</string>
   <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Aktivera dold avsändare för inkommande meddelanden från icke-kontakter och personer som du inte delat din profil med.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">Mer info</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1144,6 +1178,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="preferences_chats__create_backup">Skapa säkerhetskopia</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Skriv in lösenord för säkerhetskopian</string>
   <string name="RegistrationActivity_restore">Återställ</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Kan inte importera säkerhetskopior från nyare versioner av Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Fel lösenord för säkerhetskopian</string>
   <string name="RegistrationActivity_checking">Kontrollerar...</string>
   <string name="RegistrationActivity_d_messages_so_far">%d meddelanden än så länge...</string>
