--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -275,9 +275,11 @@
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Artık Signal\'deki arkadaşlarınızla isminizi ve profil fotoğrafınızı paylaşabilirsiniz</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal profilleri geldi</string>
   <string name="ExperienceUpgradeActivity_introducing_typing_indicators">\'Yazıyor\' göstergeleriyle tanışın.</string>
-  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Artık mesajların yazıldığını görme ve paylaşma seçeneğine sahipsiniz</string>
+  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Artık mesajların yazıldığını görme ve paylaşma seçeneğine sahipsiniz.</string>
+  <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Şimdi etkinleştirmek ister misiniz?</string>
   <string name="ExperienceUpgradeActivity_typing_ui_title">\'Yazıyor\' göstergeleri geldi</string>
   <string name="ExperienceUpgradeActivity_enable_typing_indicators">\'Yazıyor\' göstergelerini etkinleştrin.</string>
+  <string name="ExperienceUpgradeActivity_no_thanks">Hayır teşekkürler</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Mesaj alınıyor...</string>
   <!--GcmRefreshJob-->
